--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "animate.css": "^4.1.1",
     "axios": "^0.26.1",
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
